k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: floweryroad
  annotations:
    # rewrite 하면 full path가 전달되지 않으므로 주의
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: app
              port:
                number: 80
    - path: /auth
      backend:
        serviceName: "auth"
        servicePort: 80
